优化重构 (#14)
* refactor: 优化路由

* refactor: 建立公共 ErrorResponder，handler 不再各自维护映射函数

* refactor: 统一查询与排序规范

* chore: 补齐注释

* fix: 修复swagger文档
